--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
-version: '3.1'
+version: '2.4'
+x-database-variables: &database-variables
+  SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/anime?createDatabaseIfNotExist=true
+  SPRING_DATASOURCE_USERNAME: root
+  SPRING_DATASOURCE_PASSWORD: root
+
 services:
   db:
     image: mysql
@@ -9,6 +14,15 @@ services:
       - "3306:3306"
     volumes:
       - devdojo_data:/var/lib/mysql
+    mem_limit: 512m
+
+  springboot2-essentials:
+    image: guimeiradev/springboot2-essentials:0.0.1-SNAPSHOT
+    ports:
+      - "8080:8080"
+    environment:
+      <<: *database-variables
+    mem_limit: 512m
 
 volumes:
   devdojo_data:
